Change Log:
v0.10.1
  - update get.vertex.attribute.active and list.vertex.attributes.active to be compatible with new network generics
v0.10
  - update to test failing on cran after network 1.14 release
  - updates to network.edgecount.active, network.dyadcount.active and similar to be compatible
  with S3 generics introduced in network 1.14
  - corrections to some internals for rdevel changes to is.na with multiple args
v0.9
  - vignette updates
  - fixed issue where network.collpase would incorrectly nest dynamic network-level attributes if there was only one of them
  - updated McFarland classroom networks to include TEA edge attributes
  - updated as.data.frame.networkDynamic() to mostly fix dramatic speed cost of filtering features from previous release, doc corrections
  - removed warning generated by as.data.frame.networkDynamic() when network has no edge activity to return
v0.8
  - as.data.frame.networkDynamic() will now remove rows corresponding spells that lie outside of the start End censoring range
  - as.data.frame.networkDynamic() will now internally set 'start' and 'end' param to -Inf and Inf if not specified
  - networkDynamic() converter function now processes edge.changes much more quickly when adding edge activity to an empty network.
  - minor documentation fixes
  - explicit S3 method registration,
  - added edges.age.at, verticies.age.at and dyad.ages.at functions to report the age of edges or vertices at a specific time point
v0.7
  - networkDynamic now uses (and requires) C-api exported by the network package
  - additional spell operations moved to C level
  - the networkDynamic() data conversion function as additional arguments "edge.TEA.names"" and "vertex.TEA.names" and can now load dynamic edge or vertex attributes included as extra columns to edge.spells and vertex.spells.
  - pids will now be removed by as.network.networkDynamic()
  - added read.son function for parsing SoNIA-formatted files with dynamic network data